waybar.css
@define-color background #1E1E1E;
@define-color foreground #E742E7;
@define-color black #858585;
@define-color red #FF4949;
@define-color green #36DB36;
@define-color yellow #CFCF2A;
@define-color blue #7E7EFF;
@define-color magenta #E742E7;
@define-color cyan #38D5D5;
@define-color white #D4D4D4;


window#waybar * {
  font-weight: 900;
  font-size: 14px;
}

window#waybar #workspaces button.empty {
    color: @black;
    opacity: 1.0;
}
window#waybar #custom-omarchy { color: @white;}
window#waybar #clock { color: @white;}
window#waybar #custom-expand-icon { color: @white;}
window#waybar #tray { color: @white;}
window#waybar #cpu { color: @white;}
window#waybar #custom-update {color: @green;}

/* 🔋 BATTERY */
#battery { color: @foreground; }
#battery.charging, #battery.plugged, #battery.full { color: @green; }
#battery.warning { color: @yellow; }
#battery.critical { color: @red; }

/* 🌐 NETWORK (green=Connected, red=Off/Searching) */
window#waybar #network.wifi,
window#waybar #network.ethernet {color: @green;}
window#waybar #network { color: @red; }

/*  BLUETOOTH (green=Connected, yellow=On/Searching, Red=Off/Dead) */
window#waybar #bluetooth.connected { color: @green; }
window#waybar #bluetooth { color: @red; }

/*  AUDIO (Variable: cyan=Active, Red=Muted) */
window#waybar #pulseaudio { color: @green; }
window#waybar #pulseaudio.muted { color: @red; }

/* 🔴 ALERT STATES */
window#waybar #custom-screenrecording-indicator.active,
window#waybar #custom-voxtype.recording,
window#waybar #custom-idle-indicator.active,
window#waybar #custom-notification-silencing-indicator.active {
  color: @red;
}

/* weather */
window#waybar #custom-weather {color: @white}

tooltip {
  background-color: @background;
  border: 3px solid @magenta;
  font-weight: bold;
}

